Adding a few models, controllers, locales, an permalink plugin

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,6 +9,7 @@
     
   %body
     - if logged_in?
+      = "(#{current_user.login})"
       = link_to 'Logout', logout_path
     - else
       = link_to 'Login', login_path
