--- a/app/views/projects/new.haml
+++ b/app/views/projects/new.haml
@@ -1,6 +1,6 @@
-%h1 New Project
+%h1= t('.title')
 
 - form_for @project do |f|
   = project_fields(f)
   
-  = f.submit 'Create'
+  = f.submit t('.submit')
