Setup the basic template, Styled login and signup page

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -1,2 +1,16 @@
+e:compact
+@import default.sass
+@import header.sass
+@import navigation.sass
+@import wrapper.sass 
+@import footer.sass
+@import forms.sass
+
+@import projects.sass
+@import tasks.sass
+@import conversations.sass
+@import time_tracking.sass
+@import invoices.sass
+
 @import users.sass
 @import sessions.sass
