--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,17 +1,26 @@
-!!! XML
 !!! Strict
-
-%html
+%html{ :xmlns => "http://www.w3.org/1999/xhtml", 'xml:lang'=>"en", :lang=>"en" }
   %head
+    %meta{ 'http-equiv' => "content-type", :content => "text/html;charset=utf-8" }
     %title
-    
+      Teambox
     = stylesheet_link_tag 'application'
-    
-  %body
-    - if logged_in?
-      = link_to 'Logout', logout_path
-    - else
-      = link_to 'Login', login_path
-      = link_to 'Signup', signup_path
-    
-    = yield
+  %body{ :class => "#{location_name} #{I18n.locale}"}
+    .container
+      =header
+      - if logged_in?
+        = link_to 'Logout', logout_path
+      - else
+        = link_to 'Login', login_path
+        = link_to 'Signup', signup_path
+      .wrapper
+        =navigation
+        %div{ :class => "#{@content_for_column.nil? ? 'content_wrap_single' : 'content_wrap'}" }
+          .content
+            = yield
+        -unless @content_for_column.nil?
+          .column_wrap
+            .column#column
+              = yield :column
+          .clear
+      =footer
