--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -7,3 +7,7 @@
   = new_task_list_link(@project)
   
 = list_task_lists(@project)
+
+%h2 Conversations
+.new_conversation_link
+  = new_conversation_link(@project)
