--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,8 +14,10 @@
       - else
         = link_to 'Login', login_path
         = link_to 'Signup', signup_path
+      =navigation(@current_project)
       .wrapper
-        =navigation
+        = if @current_project
+          =project_navigation(@current_project)
         %div{ :class => "#{@content_for_column.nil? ? 'content_wrap_single' : 'content_wrap'}" }
           .content
             = yield
