Fixing sprockets, comments partially implemented

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -11,6 +11,7 @@ e:compact
 @import conversations.sass
 @import time_tracking.sass
 @import invoices.sass
+@import comments.sass
 
 @import users.sass
 @import sessions.sass
