fixing sprockets again

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,6 +5,7 @@
     %title
       Teambox
     = stylesheet_link_tag 'application'
+    = sprockets_include_tag
 
   %body{ :class => "#{location_name} #{I18n.locale}"}
     .container
