--- a/app/views/projects/edit.haml
+++ b/app/views/projects/edit.haml
@@ -1,8 +1,3 @@
-%h1
-  = t('.title')
-  = h(@project.name)
-
 - form_for @project do |f|
-  = project_fields(f)
-  
+  = project_fields(f,@project)
   = f.submit t('.submit')
