--- a/app/views/shared/_navigation.erb
+++ b/app/views/shared/_navigation.erb
@@ -7,6 +7,12 @@ render_tabnav :main, :generate_css => false do
       t.links_to project_path(project)
       t.highlights_on :controller => controller_name
     end
+  else
+    add_tab do |t|
+      t.named t('.all_projects')
+      t.links_to projects_path
+      t.highlights_on :controller => :projects, :action => :index
+    end    
   end
   
 end  
