--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -1,3 +1,22 @@
+div.global_navigation
+  :background rgb(76,74,74)
+  :float right
+  :padding 5px
+  :margin-top 10px
+  ul
+    :margin 0px
+    :padding 0px
+    :list-style-type none
+    li
+      :float left
+      :display block
+      a  
+        :float left
+        :display block
+    a
+      :color rgb(255,255,255)
+      :font-size 12px
+      :margin 0px 7px
 div.navigation
   :clear both
   ul
