--- a/app/views/projects/_fields.haml
+++ b/app/views/projects/_fields.haml
@@ -1,12 +1,8 @@
-= f.error_messages
-
-.name
+.name.text_field
   = f.label :name, t('.name')
-  %br
   = f.text_field :name
-
-.permalink
-  = f.label :permalink, t('.permalink')
-  %br
-  = t('.permalink_prefix')
-  = f.text_field :permalink
+- if project.new_record?
+  .permalink.text_field
+    = f.label :permalink, t('.permalink')
+    = t('.permalink_prefix')
+    = f.text_field :permalink
