--- a/app/views/projects/new.haml
+++ b/app/views/projects/new.haml
@@ -1,6 +1,5 @@
 %h1= t('.title')
 
 - form_for @project do |f|
-  = project_fields(f)
-  
+  = project_fields(f,@project)
   = f.submit t('.submit')
