--- a/app/views/shared/_project_navigation.erb
+++ b/app/views/shared/_project_navigation.erb
@@ -21,7 +21,7 @@ render_tabnav :project, :generate_css => false do
   add_tab do |t|
     t.named t('.project_settings')
     t.links_to  edit_project_path(project)
-    t.highlights_on :controller => :project, :action => :edit
+    t.highlights_on :controller => :projects, :action => :edit
     t.li_class = 'right_side'
   end
   
