Adding comments for projects, task lists

--- a/app/views/task_lists/show.haml
+++ b/app/views/task_lists/show.haml
@@ -1,3 +1,8 @@
+= new_comment_form(@current_project,@current_task_list)
+
+#comments
+  = list_comments(@comments)
+
 = list_tasks(@tasks)
 
 = new_task_link(@current_task_list)
