--- a/app/views/comments/_form.haml
+++ b/app/views/comments/_form.haml
@@ -1,6 +1,5 @@
 - remote_form_for form_url do |f|
-  .body.text_field
-    = f.text_area :body
+  = comment_fields(f)
   
   = f.submit t('.submit')
   
