more fancy navigation work, will list recent projects across the top

--- a/app/views/shared/_navigation.erb
+++ b/app/views/shared/_navigation.erb
@@ -4,15 +4,24 @@ render_tabnav :main, :generate_css => false do
     t.named t('.all_projects')
     t.links_to projects_path
     t.highlights_on :controller => :projects, :action => :index
-  end    
+  end
 
-  unless project.nil?
-    add_tab do |t|
-      t.named project.name
-      t.links_to project_path(project)
-      t.highlights_on :controller => controller_name
-    end
+  add_tab do |t|
+    t.named t('.new_project')
+    t.links_to new_project_path
+    t.highlights_on :controller => :projects, :action => :new
   end
   
+  unless recent_projects.nil?
+    for recent_project in recent_projects
+      add_tab do |t|
+        t.named recent_project.name
+        t.links_to project_path(recent_project)
+        if recent_project == project
+        t.highlights_on :controller => controller_name
+        end
+      end
+    end
+  end
 end  
 %></div>
