--- a/app/views/task_lists/_task_list.haml
+++ b/app/views/task_lists/_task_list.haml
@@ -1,2 +1,3 @@
 .task_list{ :id => "task_list_#{project.id}_#{task_list.id}"}
   = task_list_link(task_list)
+  = list_tasks(project,task_list,task_list.tasks)
