--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -12,4 +12,14 @@
       :top solid 1px rgb(196,196,196)
       :left solid 1px rgb(233,233,233)
       :bottom solid 1px rgb(233,233,233)
-      :right solid 1px rgb(196,196,196)  
+      :right solid 1px rgb(196,196,196)
+  textarea
+    :font-size 16px
+    :padding 5px
+    :font-family "Helvetica Neue", Helvetica, Arial, sans-serif
+    :border
+      :top solid 1px rgb(196,196,196)
+      :left solid 1px rgb(233,233,233)
+      :bottom solid 1px rgb(233,233,233)
+      :right solid 1px rgb(196,196,196)
+            
