--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -39,9 +39,16 @@ div.navigation
       :color rgb(48,48,48)
       :background rgb(160,228,237)
     a.active
-      :font-weight bold
       :color rgb(48,48,48)
       :background rgb(160,228,237)
+  li.button
+    a
+      :font-size 14px
+      :background rgb(43,43,43)
+      :padding 4px 8px
+    a:hover
+      :color rgb(43,43,43)
+      :background rgb(211,209,209)
       
 div.project_navigation
   :background rgb(160,228,237) url(../images/project_navigation_bg.jpg) no-repeat top
