--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,7 +11,7 @@
     .container
       =header
       =global_navigation
-      =navigation(@current_project)
+      =navigation(@current_project,@recent_projects)
       .wrapper
         =project_navigation(@current_project)
         %div{ :class => "#{@content_for_column.nil? ? 'content_wrap_single' : 'content_wrap'}" }
