--- a/app/views/pages/_fields.haml
+++ b/app/views/pages/_fields.haml
@@ -1,9 +1,6 @@
 .name.text_field
   = f.label :name, t('.name')
-  %br
   = f.text_field :name
-
-.body.text_fied
+.body.text_area
   = f.label :body, t('.body')
-  %br
   = f.text_area :body
