--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -9,6 +9,7 @@ div.column_wrap
   :float right
   :width 300px
   :padding 10px
+  :border-left 1px dashed rgb(160,160,160)
   h2
     :font-size 12px
     :text-transform uppercase
