--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -13,10 +13,11 @@ div.global_navigation
       a  
         :float left
         :display block
-    a
-      :color rgb(255,255,255)
-      :font-size 12px
-      :margin 0px 7px
+        :color rgb(255,255,255)
+        :font-size 12px
+        :margin 0px 7px
+      a:hover,a.active
+        :color rgb(255,255,0)
 div.navigation
   :clear both
   ul
