--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -6,3 +6,44 @@
   .text_field
     input
       :width 100%
+
+div.upload_avatar
+  .avatar
+    :float left
+    :width 60px
+    :height 60px
+    :margin-right 5px
+    a
+      :display block
+      :width 60px
+      :height 60px
+      :margin-right 5px
+      :background url(../images/avatar_thumb_corners.png)
+    a:hover
+      :background url(../images/avatar_thumb_corners_hover.png)
+  p.actions
+    :padding-top 5px
+    :margin 0px
+    a
+      :display block
+      :font-size 12px
+      :color rgb(0,0,255)
+      :text-decoration none
+      :margin-top 5px
+    a:hover
+      :text-decoration underline
+
+
+.thumb_avatar
+  :float left
+  :width 60px
+  :height 60px
+  :margin-right 10px
+  a
+    :display block
+    :width 60px
+    :height 60px
+    :margin-right 5px
+    :background url(/images/avatar_thumb_corners.png)
+  a:hover
+    :background url(/images/avatar_thumb_corners_hover.png)
