--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -12,6 +12,7 @@ e:compact
 @import time_tracking.sass
 @import invoices.sass
 @import comments.sass
+@import pages.sass
 
 @import users.sass
 @import sessions.sass
