--- a/app/views/pages/edit.haml
+++ b/app/views/pages/edit.haml
@@ -1,4 +1,4 @@
-- form_for [@current_project,@page] do |f|
-  = page_fields(f)
+#edit_page
+  = page_name(@page)
   
-  = f.submit t('.submit')
+  = section_divider(@page)
