--- a/app/views/pages/edit.haml
+++ b/app/views/pages/edit.haml
@@ -1,4 +1,13 @@
+- content_for :column do
+  = create_note_link(@current_project,@page)
+
 #edit_page
-  = page_name(@page)
-  
-  = section_divider(@page)
+  - form_for [@current_project,@page] do |f|
+    = page_fields(f)
+    
+    = f.submit t('.submit')
+    
+    #notes
+      = list_page_notes(@page.notes)
+    
+    = notes_sortable_tag(@page)
