--- a/app/views/pages/new.haml
+++ b/app/views/pages/new.haml
@@ -1,8 +1,6 @@
 %h2 New Page
 
 - form_for [@current_project,@page] do |f|
-  .name.text_field
-    = f.label :name, t('.name')
-    = f.text_field :name
+  = page_fields(f)
   
-  = f.submit 'Create'
+  = f.submit t('.submit')
