navigation styling, added textile support

--- a/app/views/comments/_edit.haml
+++ b/app/views/comments/_edit.haml
@@ -1,5 +1,5 @@
 - remote_form_for comment do |f|
   = comment_fields(f)
-  
-  = f.submit t('.submit')
-  = cancel_edit_comment_link(comment)
+  .submit
+    = f.submit t('.submit')
+    = cancel_edit_comment_link(comment)
