--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -1,5 +1,7 @@
 form#new_comment, form.edit_comment
   .body
     textarea
-      :width 98%
+      :width 100%
       :height 80px
+  .submit
+    :text-align right
