--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -13,6 +13,7 @@
       :left solid 1px rgb(233,233,233)
       :bottom solid 1px rgb(233,233,233)
       :right solid 1px rgb(196,196,196)
+.text_area
   textarea
     :font-size 16px
     :padding 5px
@@ -22,4 +23,3 @@
       :left solid 1px rgb(233,233,233)
       :bottom solid 1px rgb(233,233,233)
       :right solid 1px rgb(196,196,196)
-            
