--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -1,3 +1,19 @@
-div.task_list
+div.active_task_list
+  :background rgb(255,255,0)
+div.active_task
+  :background rgb(255,255,0)
+    
+div.task_list_wrap
+  :margin-top 10px
+  div.task_list
+    a
+      :font-size 12px
+
+div.task
   a
     :font-size 12px
+    
+a.add_task_link
+  :font-size 12px
+  :margin-left 6px
+  :color rgb(120,120,120)
