--- a/app/views/task_lists/_task_list.haml
+++ b/app/views/task_lists/_task_list.haml
@@ -1,3 +1,5 @@
-.task_list{ :id => "task_list_#{project.id}_#{task_list.id}"}
-  = task_list_link(task_list)
-  = list_tasks(project,task_list,task_list.tasks)
+.task_list_wrap{ :id => "task_list_#{project.id}_#{task_list.id}" }
+  .task_list{ :class => "#{ 'active_task_list' if current_target == task_list }" }
+    = task_list_link(task_list)
+  = list_tasks(project,task_list,task_list.tasks,current_target)
+  = new_task_link(task_list)
