--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -1,3 +1,3 @@
-.task
+.task{ :class => "#{ 'active_task' if current_target == task }" }
   =check_box_tag 'rwarwa'
   = link_to task.name, project_task_list_task_path(project,task_list,task)
