--- a/app/views/tasks/new.haml
+++ b/app/views/tasks/new.haml
@@ -1,6 +1,5 @@
 %h2= t('.title')
 
-- form_for [@current_project,@current_task_list,@task] do |f|
+- form_for [@current_project,@task_list,@task] do |f|
   = task_fields(f)
-  
   = f.submit t('.submit')
