--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -16,3 +16,7 @@ div.column_wrap
     :text-transform uppercase
     :border-bottom solid 1px rgb(160,160,160)
     :margin-bottom 0px
+h2.title
+  :margin 0px
+    :bottom 3px
+  :font-weight normal
