--- a/app/views/users/_fields.haml
+++ b/app/views/users/_fields.haml
@@ -1,7 +1,10 @@
 .login.text_field
   = f.label :login, t('.login')
   = f.text_field :login
-.login.text_field
+.name.text_field
+  = f.label :name, t('.name')
+  = f.text_field :name
+.email.text_field
   = f.label :email, t('.email')
   = f.text_field :email
 .password.text_field
