--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -5,3 +5,26 @@ form#new_comment, form.edit_comment
       :height 80px
   .submit
     :text-align right
+
+.comment
+  :border-bottom dashed 1px rgb(230,230,230)
+  :padding-top 10px
+  .name
+    :font-size 12px
+    a
+      :font-size 12px
+      :font-weight bold
+  p.actions
+    :position relative
+    :margin 0px
+    span    
+      :background url(../images/comment_actions_bg.jpg) no-repeat
+      :padding 3px 0px
+        :left 2px
+      :overflow auto
+      :position absolute
+      :display block
+      :width 30px
+      :height 45px
+      :left -24px
+      :top 2px    
