--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -7,7 +7,7 @@ form#new_comment, form.edit_comment
     :text-align right
 
 .comment
-  :border-bottom dashed 1px rgb(230,230,230)
+  :border-bottom solid 1px rgb(230,230,230)
   :padding-top 10px
   .name
     :font-size 12px
