--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -3,3 +3,15 @@ form#new_comment, form.edit_comment
     textarea
       :width 98%
       :height 80px
+
+#comments
+  .comment
+    :font-size 12px
+    :display block
+    :margin-top 10px
+    :border-top 1px #999 dashed
+    :padding 10px 0 10px 0
+    .actions
+      :float right
+    .user
+      :font-size 12px
