--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -7,12 +7,13 @@ e:compact
 @import forms.sass
 
 @import projects.sass
-@import tasks.sass
+@import comments.sass
 @import conversations.sass
+@import tasks.sass
+@import pages.sass
+@import people.sass
 @import time_tracking.sass
 @import invoices.sass
-@import comments.sass
-@import pages.sass
 
 @import users.sass
 @import sessions.sass
