--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -3,7 +3,11 @@
     :font-size 12px
     :margin-left 10px
     :padding-left 15px
-    :background transparent url(/images/green_dot.png) no-repeat scroll 0 4px
+    :background transparent url(/images/grey_dot.png) no-repeat scroll 0 4px
   .status
     :float right
     :color #777
+  .online
+    :background transparent url(/images/green_dot.png) no-repeat scroll 0 4px
+    .status
+      :display none
