--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,5 +1,5 @@
-.comment{:id => "comment_#{comment.id}"}
-  %p.actions
+.comment{:id => "comment_#{comment.id}" }
+  %p.actions{ :style => 'display: none' }
     %span
       = edit_comment_link(comment)
       = delete_comment_link(comment)
