--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -17,3 +17,16 @@ a.add_task_link
   :font-size 12px
   :margin-left 6px
   :color rgb(120,120,120)
+  
+div.new_task_wrap
+  :background rgb(173,173,173) url(../images/form_wrap_bg.jpg) no-repeat top
+div.new_task  
+  :background url(../images/form_bg.jpg) no-repeat bottom
+  :padding 10px
+  .text_field
+    input
+      :border
+        :top solid 1px rgb(90,90,90)
+        :left solid 1px rgb(150,150,150)
+        :bottom solid 1px rgb(150,150,150)
+        :right solid 1px rgb(90,90,90)
