--- a/app/views/task_lists/_task_list.haml
+++ b/app/views/task_lists/_task_list.haml
@@ -4,3 +4,4 @@
     = task_list_link(task_list)
   = list_tasks(project,task_list,task_list.tasks,current_target)
   = new_task_link(task_list)
+  =new_task_form(project,task_list,Task.new)
