User show view with recent activity on all projects, profile and links to his projects.
Conflicts:

	app/controllers/users_controller.rb
	public/stylesheets/sass/projects.sass

--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -42,6 +42,13 @@ div.container
   :width 960px
   :margin 0px auto
 
+div.column
+  :font-size 12px
+  a
+    :color #555
+  p
+    :margin 2px 0 2px
+
 span.unread_comment_count
   :font-weight bold
   :font-size 10px
