--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -7,6 +7,13 @@
     input
       :width 100%
 
+.show_users
+  .column
+    .name, .email, .vcard
+      :padding-left 5px
+    .vcard
+      :float right
+
 div.upload_avatar
   .avatar
     :float left
