Adding page show view
Conflicts:

	app/views/pages/_page.haml

--- a/app/views/pages/_page.haml
+++ b/app/views/pages/_page.haml
@@ -1,2 +1,5 @@
 .page
-  = edit_page_link(@current_project,page)
+  .title
+    = page_link(@current_project,page)
+  .description
+    Contains stuff
