--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -2,6 +2,8 @@
   .people_list
     %h2= t 'projects.show.people_in_project'
     = list_people(@current_project.users)
+  .subscribe
+    = link_to t('.subscribe')
 
 = new_comment_form(@current_project)
 
