--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -23,3 +23,5 @@
       :left solid 1px rgb(233,233,233)
       :bottom solid 1px rgb(233,233,233)
       :right solid 1px rgb(196,196,196)
+.submit
+  :font-size 12px
