--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -12,21 +12,40 @@ div.task_list_wrap
 div.task
   a
     :font-size 12px
+  p.actions
+    :position relative
+    :margin 0px
+    :line-height 1em
+    :font-size 1em
+    span    
+      :line-height 1em
+      :background rgb(230,230,230)
+      :padding 4px 0px
+        :left 2px
+        :bottom 0px
+      :overflow auto
+      :position absolute
+      :display block
+      :width 45px
+      :height 20px
+      :left -45px
+      :top 2px    
     
 a.add_task_link
   :font-size 12px
   :margin-left 6px
   :color rgb(120,120,120)
   
-div.new_task_wrap
+form.task_form_wrap
+  :margin-top 5px
   :background rgb(173,173,173) url(../images/form_wrap_bg.jpg) no-repeat top
-div.new_task  
-  :background url(../images/form_bg.jpg) no-repeat bottom
-  :padding 10px
-  .text_field
-    input
-      :border
-        :top solid 1px rgb(90,90,90)
-        :left solid 1px rgb(150,150,150)
-        :bottom solid 1px rgb(150,150,150)
-        :right solid 1px rgb(90,90,90)
+  div.task_form
+    :background url(../images/form_bg.jpg) no-repeat bottom
+    :padding 10px
+    .text_field
+      input
+        :border
+          :top solid 1px rgb(90,90,90)
+          :left solid 1px rgb(150,150,150)
+          :bottom solid 1px rgb(150,150,150)
+          :right solid 1px rgb(90,90,90)          
