--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -11,3 +11,8 @@
     :background transparent url(/images/green_dot.png) no-repeat scroll 0 4px
     .status
       :display none
+
+.people_cards
+  .person
+    :display block
+    :border 1px #000 solid
