Adding the ability to remove people with HTML (no JS). Setup a special route to delete people with a GET request. Changed Project#add_person to #add_user, added #remove_user. Renamed _person_add.haml activity to _user_add.haml, because the activity must refer to an existing object. If we refer to Person and person is deleted, an error message will be raised.

--- a/app/views/people/_person_block.haml
+++ b/app/views/people/_person_block.haml
@@ -2,5 +2,4 @@
   = person.login
   = person.name
   = person.email
-  .status
-    = time_ago_in_words(person.updated_at)
+  = link_to 'Remove from project', destroy_project_person_path(@current_project,person)
