Adding file uploads for comments

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -10,7 +10,8 @@
     = comment.created_at.strftime("%I:%M %p &mdash; %b %d %Y")
   .body
     = comment.body_html
-  - if comment.uploads.count
+  - if comment.uploads.count > 0
     .upload_list
       = list_uploads_inline(comment.uploads)
-  .clear  
+      %br
+  .clear
