--- a/app/views/comments/_edit.haml
+++ b/app/views/comments/_edit.haml
@@ -1,5 +1,6 @@
 - remote_form_for comment do |f|
   = comment_fields(f)
+  = upload_a_file_link(comment)
   .submit
     = f.submit t('.submit')
     = cancel_edit_comment_link(comment)
