--- a/app/views/uploads/_iframe_upload.haml
+++ b/app/views/uploads/_iframe_upload.haml
@@ -1,5 +1,2 @@
-.uploads_save{:style => 'display: none;'}
-.uploads_current
-%iframe.upload_form{:src => upload_url_for(project,target) }
+%iframe.upload_form{:src => upload_url_for(comment) }
   &nbsp;
-%br
