--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -21,3 +21,34 @@
     :margin-right 5px
   .show_details
     :float left
+.iframe_container
+  :height 30px
+  :overflow none
+  :background white
+  :font-family Verdana, Arial, sans-serif
+  form
+    .file, .description
+      :font-size 12px
+    .description
+      :margin-top 5px
+    .field .upload_description
+      :width 320px
+a.add_upload
+  :margin-left 5px
+  :font-size 12px
+  &:hover
+    :text-decoration none
+.uploads_current, .upload_list
+  :margin 5px
+  :border 1px solid rgb(230,230,230)
+  :padding 5px
+  :clear both
+  .upload_thumbnail
+    :float left
+    :margin-right 5px
+iframe.upload_form
+  :width 90%
+  :height 30px
+  :border 0
+  :margin-left 5px
+  :margin-top 5px
