--- a/app/views/shared/_project_navigation.erb
+++ b/app/views/shared/_project_navigation.erb
@@ -60,11 +60,11 @@ render_tabnav :project, :generate_css => false do
       t.highlights_on :controller => :pages
     end
 
-    #add_tab do |t|
-    #  t.named t('navigation.people')
-    #  t.links_to  project_people_path(project)
-    #  t.highlights_on :controller => :people
-    #end
+    add_tab do |t|
+      t.named t('.time_tracking')
+      t.links_to  project_time_tracking_path(project)
+      t.highlights_on :controller => :hours
+    end
 
   end
 end
