Revert "adjusted helper files to pass project to comment view"
This reverts commit 0e6e1272c34c7f92b151b53ab77226a2e852e3d8.

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,8 +1,8 @@
 .comment{:id => "comment_#{comment.id}" }
   %p.actions{ :style => 'display: none' }
     %span
-      = edit_comment_link(project,comment)
-      = delete_comment_link(project,comment)
+      = edit_comment_link(comment)
+      = delete_comment_link(comment)
 
   =thumb_avatar(comment.user)
   .name
