--- a/app/views/task_lists/show.haml
+++ b/app/views/task_lists/show.haml
@@ -9,4 +9,4 @@
 = new_comment_form(@current_project,@task_list)
 
 #comments
-  = list_comments(@current_project,@comments)
+  = list_comments(@comments)
