adding index to uploads

--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -14,6 +14,12 @@
       :left -24px
       :top 2px
 
+#uploads
+  :padding 5px
+  .upload
+    :clear both
+    
+
 .upload
   +actions
   .thumbnail
