--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -5,6 +5,7 @@ e:compact
 @import wrapper.sass 
 @import footer.sass
 @import forms.sass
+@import flash_box.sass
 
 @import projects.sass
 @import comments.sass
