Default font size set to 12px

--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -2,6 +2,7 @@
 html,body 
   :margin 0px 
   :padding 0px
+  :font-size 12px
 body
   :background rgb(49,48,48)
   :font-family Verdana, Arial, sans-serif
@@ -33,10 +34,10 @@ textarea
 div.clear 
   :clear both
 a
-  :color rgb(0,0,255)
-  :text-decoration none
-a:hover
+  :color rgb(50,50,50)
   :text-decoration underline
+a:hover
+  :text-decoration none
     
 div.container
   :width 960px
