--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -1,4 +1,5 @@
 /* Default------------------------------------------------------------------------
+
 html,body 
   :margin 0px 
   :padding 0px
@@ -36,9 +37,10 @@ div.clear
 a
   :color rgb(50,50,50)
   :text-decoration underline
-a:hover
-  :text-decoration none
-    
+  :outline none
+  &:hover
+    :text-decoration none
+
 div.container
   :width 960px
   :margin 0px auto
