--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -67,10 +67,9 @@ div.project_navigation
       :display block
       :color rgb(26,149,168)
       :text-decoration none
-      :padding 6px 4px
-      :margin-right 10px
+      :padding 2px 10px 2px 4px
       :margin-bottom 2px
-      :font-size 15px
+      :font-size 12px
     a:hover
       :color rgb(0,0,0)
       :text-decoration underline
