--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -7,6 +7,16 @@
     input
       :width 100%
 
+.edit_users, .update_users
+  label
+    :float left
+    :width 120px
+    :text-align right
+    :padding-right 10px
+    :vertical-align middle
+  .submit
+    :margin 15px 0px 0px 300px
+
 div.upload_avatar
   .avatar
     :float left
