--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,12 +14,13 @@
       =navigation(@current_project,@recent_projects)
       .wrapper
         =project_navigation(@current_project)
+        - if flash[:success]
+          .flash_box.success= flash[:success]
+        - if flash[:error]
+          .flash_box.error= flash[:error]
+        - if flash[:notice]
+          .flash_box= flash[:notice]
         %div{ :class => "#{@content_for_column.nil? ? 'content_wrap_single' : 'content_wrap'}" }
-          - if flash[:error]
-            .flash_box.error= flash[:error]
-
-          - if flash[:success]
-            .flash_box.success= flash[:success]
           .content
             = yield
         -unless @content_for_column.nil?
